   better designed one currently documented.
   Note: the old interface will be eventually removed.
3. added interfaces for banded systems (cholesky, LDLT)
4. added missing calls from spmatrix module (note: some
   remain unsupported).
5. Updated specfunc Hermite polynomial and function interfaces.
6. Added recursive QR solvers to linalg

Comment:

*  the gsl_bst module is not supported in this release.
   

Changes in 1.4.0 (by R Bader):
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
This release introduces support for gsl 2.5. An overview:

1. added interface for Romberg integration
2. added interface for Wishart distribution
3. added interface for Moving Window Statistics
4. added further statistics calls
5. added interface for Digital Filtering
6. started with an improved interface for array handling


Changes in 1.3.0 (by R Bader):
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
This release introduces support for gsl 2.4. An overview:

1. fixes in fgsl_utils.c and mod_unit 
2. fgsl_linalg_cod_*: added lssolve2 and changed QRZ to QRZT in all calls
   (NOTE: keyword calls for previously existing COD routines with
    QRZT argument must be updated in client code)
3. removed deprecated interfaces from interface/bspline.finc 
4. specfunc changes:
    * interoperable calls are now thin bindings again (save on call overhead)
5. Applying c_loc to assumed shape arguments was wrong:
    * where not reverted to thin binding, now specified with CONTIGUOUS.
6. Added fgsl_integration_fixed_* interface to IQPACK
7. Added fgsl_sf_hermite_* interface
8. Fixed problems with interp2d, integration_qagp, linalg_qrpt, and sort 
   test cases.


Changes in 1.2.0 (by R Bader):
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
This release introduces support for gsl 2.3. An overview:

1. added support for the multifit_nlinear and multilarge_nlinear interfaces, 
   including example programs
2. added fgsl_rstat_rms, fgsl_rstat_quantile_reset to rstat interface
3. updated the linalg interface with additional Cholesky routines 